# MScProjectWildFirePredict

./: .$WidFirePrediction.drawio.dtmp  .gitignore  <class 'pathlib.Path'>_dictionary_test.json  AutoArchitecture.md  Pipfile  Project Structure.md  WidFirePrediction.drawio  WildFirePredict.ipynb  architecture.md  grid1_check.html  pyproject.toml  runner.py  sample_001.npy  scracth_test.py  scrath_file.ipynb  validation_map.html
src/: config.py  google_ee.py  load_data.py  pp_sentinel.py  preprocessing_general.py  utils.py
src/data_io/: fwi_loader.py
src/datasets/fwi/: loader.py  pipeline.py
src/datasets/ukgrid/: loader.py  pipeline.py
src/datasets/viirs/: loader.py  pipeline.py  transforms.py
src/loaders/: fwi_loader.py  ukgrid_loader.py  viirs_loader.py
src/mscprojectwildfirepredict.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pipelines/: architecture_doc_pipeline.py  fwi_pipeline.py  tabular_data_pipeline.py  tabular_load_pipeline.py  ukgrid_pipeline.py  viirs_pipeline.py
src/preprocessing/: pp_sentinel.py  pp_summaries.py
src/reporting/: data_profiler.py
src/scripts/: run_tabular.py  set_parameters.py  validation_checks.py
src/transforms/: fwi_transforms.py  preprocessing_transforms.py  viirs_transforms.py
src/utils/: architecture_builder.py  datasets_utils.py  file_utils.py  run_control.py
tests/: test_fwi_loader.py  test_load_data.py  test_pp_sentinel.py  test_preprocessing_general.py  test_utils.py  test_viirs_transforms.py
