[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mscprojectwildfirepredict"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
# Tell Pylance your code lives in 'src' so 'import utils' works
extraPaths = ["src"]
typeCheckingMode = "standard"

# Set diagnostic levels for libraries that don't have type stubs (pygrib, cdsapi)
reportMissingTypeStubs = "none"
# Force unused imports to show up as warnings or errors
reportUnusedImport = "warning" 
reportUnusedVariable = "warning"